tests/errors/implicit_arg_conversion.rsg
// TEST: compile_error
// EXPECT-ERROR: type mismatch
module test_err

fn double(x: i64) -> i64 {
    x * 2
}

fn main() {
    var a: i32 = 10
    var b: i64 = double(a)
}
